--- a/.github/workflows/python-publish-testpypi.yml
+++ b/.github/workflows/python-publish-testpypi.yml
@@ -9,14 +9,15 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
 
 jobs:
-  release-build:
+  test-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,45 +27,37 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Build release distributions
+      - name: Build distributions
         run: |
-          # NOTE: put your own distribution build steps here.
           python -m pip install build
           python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
-          name: release-dists
+          name: test-dists
           path: dist/
 
   pypi-publish:
     runs-on: ubuntu-latest
     needs:
-      - release-build
+      - test-build
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
 
     # Dedicated environments with protections for publishing are strongly recommended.
     # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
     environment:
-      name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
+      name: test-pypi
 
     steps:
-      - name: Retrieve release distributions
+      - name: Retrieve test distributions
         uses: actions/download-artifact@v4
         with:
-          name: release-dists
+          name: test-dists
           path: dist/
 
-      - name: Publish release distributions to PyPI
+      - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
