--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -9,9 +9,10 @@
 name: Upload Python Package
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Lint and Test"]
+    types:
+      - completed
 
 permissions:
   contents: read
