--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,4 @@ repos:
         entry: pytest
         language: system
         types: [python]
+        pass_filenames: false # Run pytest on the entire repository
