--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: TestPyPI Python Package
 
 on:
   workflow_run:
@@ -39,7 +39,7 @@ jobs:
           name: test-dists
           path: dist/
 
-  pypi-publish:
+  testpypi-publish:
     runs-on: ubuntu-latest
     needs:
       - test-build
